--- a/config.json
+++ b/config.json
@@ -16,11 +16,11 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -sanifa⚠️",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100000478146113",
-        "61576520552554",
+        "100078036488093",
+        "100079095211737",
         "61550035211214"
     ],
     "NDH": [
